# gern_engine

./: .clang-format  .gitignore  CMakeCache.txt  CMakeLists.txt  LICENSE  README.md  SOIL2GUIDE.txt  TODO.txt  animation.anm  cmake_install.cmake  fragment.fsh  gitkey  gitkey.pub  glm.7z  main.cpp  might_beeeeeeeeeeee.pro  ogl  skeleton.skl  skybox_fragment.fsh  vertex.vsh
SOIL2/: common.cpp
engine/: abuffer.h  animation.h  aobject.h  buffer.h  camera.h  common.h  framebuffer.h  instancedbuffer.h  instancedmesh.h  instancedobject.h  joint.h  jointposition.h  lightsource.h  main.cpp  mainloader.h  material.h  materialloader.h  mesh.h  meshbuffer.h  meshloader.h  meshobject.h  mouselistener.h  object.h  perspective.h  position.h  renderer.h  sceneloader.h  shader.h  shaderfield.h  shaderuniform.h  skeletizer.h  skeletonbuffer.h  skeletonloader.h  skeletonmesh.h  skeletonobject.h  skybox.h  skyboxobject.h  skyboxtexture.h  texture.h  timer.h  (+2 more)
engine/animation/: animation.h  joint.h  jointposition.h  pose.h  poseloader.h
engine/buffer/: abuffer.h  instancedbuffer.h  meshbuffer.h  skeletonbuffer.h
engine/common/: alist.h  commanditerator.h  common.h  event.h  gl.h  glintvec3.h  glm.h  icommand.h  icontext.h  ilist.h  iposition.h  list.h  loader.h  uintvec3.h
engine/engine/: buffer.h  camera.h  common.h  joint.h  mesh.h  object.h  perspective.h  skeletizer.h  skeletonbuffer.h  skeletonmesh.h  skeletonobject.h  skybox.h  texture.h
engine/mesh/: amesh.h  imesh.h  ivertex.h  mesh.h  meshloader.h  skeletonloader.h  skeletonmesh.h  skeletonvertex.h  vertex.h
engine/object/: aobject.h  instancedobject.h  iobject.h  meshobject.h  skeletonobject.h  skyboxobject.h
engine/render/: arenderer.h  framecontroller.h  framemodel.h  iframecontroller.h  iframemodel.h  irenderer.h  isceneloader.h  mouselistener.h  renderer.h  sceneloader.h  window.h
engine/shader/: camera.h  ishaderfield.h  lightsource.h  perspective.h  position.h  shader.h  shaderattrib.h  shaderfield.h  shaderfieldlist.h  shaderloader.h  shadermatattrib.h  shaderuniform.h  view.h
engine/shaders/: obj_fragment.fsh  obj_vertex.vsh  screen_vertex.vsh  skeleton_obj_vertex.vsh  skybox_vertex.vsh
engine/texture/: framebuffer.h  itexture.h  material.h  materialloader.h  skyboxtexture.h  texture.h
models/Character_A1016A457/: 1e1868e0.tif  aaa.mtl  animation.anm  skeleton.skl
models/GenshinImpactPack/Barbara/: Barbara.pmx
models/GenshinImpactPack/Fischer/: Fischer.pmx
models/GenshinImpactPack/Jean/: Jean.pmx
models/GenshinImpactPack/Ningguang/: Ningguang.pmx
models/GenshinImpactPack/Xiangling/: Xiangling.pmx
models/GenshinImpactPack/diluc/: diluc.pmx
models/GenshinImpactPack/paimon/: paimon.anm  paimon.mtl
models/neptune/: 0001_d.max
resources/models/GenshinImpactPack/Amber/: Amber.pmx
resources/models/GenshinImpactPack/Hilichurl/: Hilichurl.pmx
resources/models/GenshinImpactPack/Lisa/: Lisa.pmx
resources/models/GenshinImpactPack/The Traveler Female/: The Traveler Female.pmx
resources/models/GenshinImpactPack/Venti/: Venti.mtl  Venti.pmx
resources/models/GenshinImpactPack/kaeya/: kaeya.pmx
resources/models/GenshinImpactPack/paimon/: paimon.anm  paimon.mtl  paimon.pmx  paimon.skl
resources/scenes/: test.txt
scenes/: test.txt
shaders/: common_light.fsh  fragment.fsh  instanced_obj_fragment.fsh  instanced_obj_vertex.vsh  obj_fragment.fsh  screen_fragment.fsh  screen_vertex.vsh  skeleton_obj_fragment.fsh  skeleton_obj_vertex.vsh  skybox_fragment.fsh  skybox_vertex.vsh  vertex.vsh
usrsrc/: flags.h  framecontroller.h  framemodel.h  renderer.h  sceneloader.h
